profilelist1exp/unpackaged/objects/CustomerInteraction_Mirror__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Trip_Report_Mirror1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Action_Items__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - R9.9 CR #0218||</description>
        <label>Action Items</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/contactDupeChecker?retURL=&apos;+  Id  +&quot;&amp;save_new=1&amp;nooverride=1&amp;saveURL=&quot; + Id + &quot;&amp;cancelURL=&quot; + Id + &quot;&amp;accountId=&quot; + Account__c, 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000000Tdxy&quot;,&quot;Create New Contact&quot;),
&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition_Discussed__c</fullName>
        <label>Competition Discussed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acando</fullName>
                </value>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Acer</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>ASUS</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Atos Origin</fullName>
                </value>
                <value>
                    <fullName>Automatic Data Processing (ADP)</fullName>
                </value>
                <value>
                    <fullName>Avnet</fullName>
                </value>
                <value>
                    <fullName>Barron McCann</fullName>
                </value>
                <value>
                    <fullName>Brocade</fullName>
                </value>
                <value>
                    <fullName>CDW</fullName>
                </value>
                <value>
                    <fullName>Cisco Systems</fullName>
                </value>
                <value>
                    <fullName>EMC</fullName>
                </value>
                <value>
                    <fullName>Epson</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>Hewlett-Packard</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>InSight</fullName>
                </value>
                <value>
                    <fullName>Juniper Networks</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>NetApp</fullName>
                </value>
                <value>
                    <fullName>Nimble</fullName>
                </value>
                <value>
                    <fullName>Panasonic</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>Softchoice</fullName>
                </value>
                <value>
                    <fullName>Software House International (SHI)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Attendee1_DMR1__c</fullName>
        <formula>TEXT(Customer_Attendee1__r.Decision_Making_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Attendee1 DMR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Attendee1_Title__c</fullName>
        <formula>Customer_Attendee1__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Attendee1 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Attendee1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Attendee1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Trip_Report_Mirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Attendee2_DMR2__c</fullName>
        <formula>TEXT(Customer_Attendee2__r.Decision_Making_Role__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Attendee2 DMR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Attendee2_Title__c</fullName>
        <formula>Customer_Attendee2__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Attendee2 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Attendee2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Attendee2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Trip_Report_Mirror1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Attendee3_DMR3__c</fullName>
        <formula>TEXT(Customer_Attendee3__r.Decision_Making_Role__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Attendee3 DMR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Attendee3_Title__c</fullName>
        <formula>Customer_Attendee3__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Attendee3 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Attendee3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Attendee3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Trip_Report_Mirror2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Attendees__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  List of the Customer Attendees
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Customer Attendee - Manual Entry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  Date of the Customer Interaction
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dell_Attendees__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc - List of the Attendees from Dell||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <inlineHelpText>This field has been replaced by the above User look-up fields. If edits are needed, please raise a TT.</inlineHelpText>
        <label>Other Dell Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_10__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - R 9.9 CR # 0251||</description>
        <inlineHelpText>For sending the trip report notification to external Email Addresses.</inlineHelpText>
        <label>Email 10</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_1__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - R 9.9 CR # 0251||</description>
        <label>Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - R 9.9 CR # 0251||</description>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Goal_Objective__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -Goal and Objective for the Trip Report  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Goal / Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Plan</fullName>
                </value>
                <value>
                    <fullName>Business Dev</fullName>
                </value>
                <value>
                    <fullName>CE Issues</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>D-PACK</fullName>
                </value>
                <value>
                    <fullName>EBR/QBR</fullName>
                </value>
                <value>
                    <fullName>Lease / Financing</fullName>
                </value>
                <value>
                    <fullName>Roadmap</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB_s_Discussed__c</fullName>
        <label>LOB’s Discussed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Peripherals</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Systems Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -Location of the Customer Interaction  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc - ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Next Steps</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Dell_Attendee1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Dell Attendee1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trip_Report_Mirror5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Dell_Attendee2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Dell Attendee2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trip_Report_Mirror6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Dell_Attendee3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Dell Attendee3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trip_Report_Mirror7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Attendees__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc - List of the Partner Attendees||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Partner Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Dell_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc - ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - R 9.9 0278 ||</description>
        <label>Primary Dell Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Interactions_Mirror11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Demo__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc - ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - R 9.9 0276 ||</description>
        <label>Product Demo</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Goal_Objective__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AppAssure</fullName>
                </value>
                <value>
                    <fullName>Compellent</fullName>
                </value>
                <value>
                    <fullName>EMC</fullName>
                </value>
                <value>
                    <fullName>EQL &amp; KACE</fullName>
                </value>
                <value>
                    <fullName>EqualLogic</fullName>
                </value>
                <value>
                    <fullName>Force 10</fullName>
                </value>
                <value>
                    <fullName>JRX</fullName>
                </value>
                <value>
                    <fullName>KACE</fullName>
                </value>
                <value>
                    <fullName>OpenManage</fullName>
                </value>
                <value>
                    <fullName>Peripherals</fullName>
                </value>
                <value>
                    <fullName>PowerEdge</fullName>
                </value>
                <value>
                    <fullName>PowerVault</fullName>
                </value>
                <value>
                    <fullName>SecureWorks</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>SonicWall</fullName>
                </value>
                <value>
                    <fullName>SOW Delivered</fullName>
                </value>
                <value>
                    <fullName>VIS</fullName>
                </value>
                <value>
                    <fullName>WYSE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Dell_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc - ||
SFA -Y/PRM -N||
VAL -N|| 
CR# -  R 9.9 0278||</description>
        <label>Secondary Dell Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Interactions_Mirror10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Notification_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc - ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Send Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc - Summary of the Customer Interaction||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc - What type of Trip is it? ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Planning Session</fullName>
                </value>
                <value>
                    <fullName>Business/Management Review</fullName>
                </value>
                <value>
                    <fullName>Dell Visit</fullName>
                </value>
                <value>
                    <fullName>Dell Visit-DSC Support</fullName>
                </value>
                <value>
                    <fullName>EBC</fullName>
                </value>
                <value>
                    <fullName>Lead Generation Event</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>On-Site Customer Visit</fullName>
                </value>
                <value>
                    <fullName>On-Site Customer Visit-DSC Support</fullName>
                </value>
                <value>
                    <fullName>Partner Meeting</fullName>
                </value>
                <value>
                    <fullName>Partner Meeting-DSC Support</fullName>
                </value>
                <value>
                    <fullName>Roadmap Discussion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For sending trip report notification to internal SFDC users</description>
        <inlineHelpText>For sending trip report notification to internal SFDC users</inlineHelpText>
        <label>User 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trip_Report_Mirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For sending trip report notification to internal SFDC users</description>
        <inlineHelpText>For sending trip report notification to internal SFDC users</inlineHelpText>
        <label>User 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trip_Report_Mirror1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For sending trip report notification to internal SFDC users</description>
        <inlineHelpText>For sending trip report notification to internal SFDC users</inlineHelpText>
        <label>User 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trip_Report_Mirror2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Trip Report Archive</label>
    <nameField>
        <label>Trip Report Archive</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip Reports Archive</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>